--- a/ProjektWatki/ProjektWatki/MainWindow.xaml
+++ b/ProjektWatki/ProjektWatki/MainWindow.xaml
@@ -5,8 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProjektWatki"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="600" Width="800">
+    <Window.Background>
+        <ImageBrush ImageSource="Resources/mapa_v5.png"/>
+    </Window.Background>
     <Grid>
-
+        
     </Grid>
 </Window>
