--- a/ProjektWatki/ProjektWatki/MainWindow.xaml
+++ b/ProjektWatki/ProjektWatki/MainWindow.xaml
@@ -1,4 +1,6 @@
-﻿<Window x:Class="ProjektWatki.MainWindow"
+﻿<Window x:Class="ProjektWatki.MainWindow"c:\users\jakub haraf\source\repos\projektso\projektwatki\projektwatki\mainwindow.xaml.cs
+c:\users\jakub haraf\source\repos\projektso\projektwatki\projektwatki\mainwindow.xaml
+
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
