--- a/ProjektWatki/ProjektWatki/MainWindow.xaml
+++ b/ProjektWatki/ProjektWatki/MainWindow.xaml
@@ -5,9 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProjektWatki"
         mc:Ignorable="d"
-        Title="Road traffic" Height="600" Width="800">
+        Title="Road traffic" Height="600" Width="800" ResizeMode="NoResize">
     <Window.Background>
         <ImageBrush ImageSource="Resources/mapa_v5.png"/>
     </Window.Background>
-    <Canvas Name="CanvasMain"/>
+    <Canvas Name="CanvasMain">
+    </Canvas>
 </Window>
